lang/examples/good/03_zmienne_przypisanie.gt
fn main() -> int {
    var a = 42;
    var b : bool;
    var c : char;
    var d = "huh?";

    a = 1;
    b = true;
    c = 'c';
    d = "eh?";

    return 0;
}
