lang/examples/bad/WrongType.gt
fn main() -> int {
    var x = 1;
    var y = true;
    if (x == y)
        print("hmm\n");
    return 0;
}
